Fixed styling to clear up todo on the list, quiz, registry pages. Also added in a click handler for the sort function on mobile.

--- a/app/assets/stylesheets/mobile-list.css.scss
+++ b/app/assets/stylesheets/mobile-list.css.scss
@@ -167,12 +167,17 @@
 
 					li {
 						border-left: none;
+
+					  	> br {
+						  display: none;
+					  	}
 					}
 				}
 
 				em {
 					color: #333333;
 					display: inline-block;
+				    vertical-align: top;
 
 					i {
 						padding-right: 5px;
@@ -677,8 +682,6 @@
 			}
 		}
 
-
-
 	}
 
 	#simplemodal-container {
@@ -694,7 +697,8 @@
 			background-color: white;
 		}
 
-		#recommendations-editor.simplemodal-data {
+		#recommendations-editor.simplemodal-data,
+		#email-modal.simplemodal-data {
 			width: 100%;
 			display: block;
 		}
@@ -703,7 +707,8 @@
 			padding: 4.3rem 0px 5em 0px;
 		}
 
-		.quiz-results {
+		.quiz-results,
+		#email-modal {
 
 			h2 {
 				/*display: none;*/
@@ -1019,6 +1024,22 @@
 				display: none;
 			}
 
+		}
+
+	  	#email-modal {
+		  h2 {
+			display: block;
+		  }
+
+		  fieldset {
+			margin-left: 5px;
+
+			label,
+			input[type="text"],
+			textarea {
+			  width: 100%;
+			}
+		  }
 		}
 	}
 }
