--- a/app/assets/stylesheets/mobile-quiz.css.scss
+++ b/app/assets/stylesheets/mobile-quiz.css.scss
@@ -210,7 +210,7 @@
 
 	#quiz-modal {
 		.content {
-			padding: 4.3rem 0px 5em 0px;
+			padding: 4.3rem 0px 5em 0px !important;
 
 			.quiz-title {
 				font-size: 1.1rem;
